RP-1118 Update InactivatedConceptsByRelease